[tool.poetry]
name = "webcash"
version = "0.1.0"
description = ""
authors = ["Łukasz Zosiak <lukasz.zosiak@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "webcash", from="src"}]

[tool.poetry.dependencies]
python = "^3.12"
tabulate = "^0.9.0"
click = "^8.1.7"
furl = "^2.1.3"
"ruamel.yaml" = "^0.18.6"
piecash = "^1.2.1"
lxml = "^5.2.2"
chardet = "^5.2.0"
unidecode = "^1.3.8"
colorama = "^0.4.6"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.1"
ruff = "^0.5.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
statements = "webcash.utils.statements:cli"